# walmart-sales-forecasting

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: python-workflow.yml
config/: config.py  logger.py
src/walmart_model/: main.py  process_transactions.py  train_model.py
src/walmart_model/components/: csv_loader.py  item_feature_service.py  item_loader.py  item_reader.py  item_splitter.py  lightgbm_trainer.py  parquet_reader.py  preprocessor.py  sales_record_loader.py  scorer.py  training_pipeline.py  transaction_processor.py  walmart_model.py
src/walmart_model/data_models/: item.py  prediction.py  sales_record.py  transaction.py
