[tool.poetry]
name = "walmart-model"
version = "0.1.0"
description = ""
authors = ["Matteo Latinov <matteo@latinov.com>"]
readme = "README.md"
packages = [
    {include = "walmart_model", from = "src"},
    {include = "config"}
]

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.7"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
pydantic = "^2.5.2"
rich = "^13.7.0"
typer = "^0.9.0"
polars = "^0.19.19"
scikit-learn = "^1.3.2"
lightgbm = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
exclude = ["jupyter_notebook_config.py"]
select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "C901",  # too complex
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
addopts = "-ra -q"
testpaths = [
    "tests",
]
